# Alumni-Management-System

./: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  alumni.h  alumni_data.txt
include/: alumni.h  alumni_list.h
src/: Alumni.cpp  Alumni.h  AlumniList.cpp  AlumniList.h  Menu.cpp  Menu.h  Person.cpp  Person.h  alumni.cpp  alumni.h  alumni_data.txt  alumni_list.cpp  alumni_list.h  alumni_manager.h  globals.cpp  globals.h  main.cpp  menu.cpp  menu.h  person.cpp  person.h
